#    DATE: 9 Dec 2021 - Today
#  AUTHOR: Roman Bergman <roman.bergman@protonmail.com>
# LICENSE: AGPL3.0
# VERSION: 0.0.8

[metadata]
name = pptChecker
version = 0.3.10
description = Proxy Checker
author = Roman Bergman
author_email = roman.bergman@protonmail.com
url = https://github.com/roman-bergman/pptChecker
license = AGPL3.0
license_files = LICENSE

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    pptChecker = proxychecker.app:main
